bottomnav: fix dark mode colors

--- a/components/core/bottomnav/theming.scss
+++ b/components/core/bottomnav/theming.scss
@@ -2,10 +2,11 @@
 @import '../../common/mixins.scss';
 
 $bottomnavColors: (
-  active-color:      (inherit,        (#fff, 1.0)),
-  inactive-color:    ((#000, 0.54), (#fff, 0.50)),
-  ripple-color:      ( #000       ,  #fff       ),
-  ripple-opacity:    (         0.12 ,          0.30,           0.20),
+  active-color:         (inherit       , inherit),
+  filled-active-color:  (inherit       , (#fff, 1.0)),
+  inactive-color:       ((#000, 0.54), (#fff, 0.50)),
+  ripple-color:         ( #000       ,  #fff       ),
+  ripple-opacity:       (         0.12 ,          0.30,           0.20),
 );
 
 @function bottomnavThemeValue($key, $type, $theme) {
@@ -16,8 +17,29 @@ $bottomnavColors: (
   @include themeVariables('bottomnav', $bottomnavColors, $color, $lightness);
 }
 
+@mixin internalBottomnavContrastRules($type, $theme: null) {
+  @at-root {
+    #{&}.mdw-bottomnav[mdw-theme-fill] {
+      input:checked ~ .mdw-bottomnav__icon,
+      input:checked ~ .mdw-bottomnav__label,
+      .mdw-bottomnav__item[mdw-selected] > .mdw-bottomnav__icon,
+      .mdw-bottomnav__item[mdw-selected] > .mdw-bottomnav__label,
+      input:checked + .mdw-bottomnav__item > .mdw-bottomnav__icon,
+      input:checked + .mdw-bottomnav__item > .mdw-bottomnav__label {
+        color: bottomnavThemeValue("filled-active-color", $type, $theme);
+      }
+    }
+  }
+}
+
 // Vary by contrast
 @mixin bottomnavContrastRules($type: 'var', $theme: null) {
+  @include internalBottomnavContrastRules($type, $theme);
+  @if ($type != 'var') {
+    :not([mdw-theme-fill]) {
+      @include internalBottomnavContrastRules($type, $theme);
+    }
+  }
   .mdw-bottomnav__icon,
   .mdw-bottomnav__label {
     color: bottomnavThemeValue("inactive-color", $type, $theme);
